Flex intro -- 29 JAN 2024

--- a/css.html
+++ b/css.html
@@ -11,6 +11,7 @@
     <aside></aside>
     <footer></footer> -->
   <p style="
+        text-align: center;
         min-height: 300px;
         font-size: 20px;
         /* font-weight: 500; */
